# demo-mage-ai

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
database_management/: env.py  models.py
database_management/versions/: 23ba2c604357_change_constraints.py  3c4fa86a9970_initial.py  aa3a8a88650a_initial_2.py  aa948d94b4c0_initial_3.py
demo_error_read_write/: io_config.yaml
demo_error_read_write/data_exporters/: export_file_customers.py  export_file_orders.py  load_raw_customers_managed.py  load_raw_customers_pd_driven.py  load_raw_orders_managed.py  load_raw_orders_pd_driven.py  spark_auto_customers_step.py  spark_auto_orders_step.py  spark_managed_customers_step.py  spark_managed_orders_step.py  write_dim_customer.py  write_raw_customer.py
demo_error_read_write/data_loaders/: black_sky.py  crimson_violet.sql  damp_dust.sql  dim_customer_dbt.py  fragrant_frost_check1.sql  generate_corrupted_customers.py  generate_corrupted_orders.py  get_fake_customers.py  get_fake_orders.py  lingering_sky.py  long_wind.py  read_customer_file.py  sparkling_mountain.sql  summer_field.sql
demo_error_read_write/data_setup/: generate_fake_data.py  utils.py
demo_error_read_write/scratchpads/: check_spark_data.py  lively_sun.py  pandas_customer.py  pandas_orders.py  pg_schema_customers.py  pg_schema_orders.py  spark_auto_customers.py  spark_orders.py  spark_schema_customers.py  spark_schema_orders.py
demo_error_read_write/transformers/: add_cut_off_date.py  dawn_sound.sql  fill_in_missing_values.py  nameless_bush.py  sti_customer.sql
(+215 files in other folders)
