[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["acirtep <acirtep>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mage-ai = "^0.6.3"
Faker = "4.14.0"
boto3 = "^1.24.96"
pyspark = "^3.3.1"
delta-spark = "^2.1.1"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
